Fix print theme error, spacing

--- a/app/components/DescriptionList/index.scss
+++ b/app/components/DescriptionList/index.scss
@@ -2,35 +2,29 @@
 
 .description-list {
   &__group {
-    width: 45%;
+    width: 43%;
     display: inline-flex;
     border-bottom: 1px solid $palette__text--secondary;
 
     &:nth-child(1n) {
-      margin: 0 5% 0 0;
+      margin: 0 5% 8px 2%;
     }
 
     &:nth-child(2n) {
-      margin: 0 0 0 5%;
-    }
-
-    &:nth-last-child(1) {
-      border: none;
-    }
-
-    &:nth-last-child(2) {
-      border: none;
+      margin: 0 2% 8px 5%;
     }
   }
 
   &__term {
     display: inline-flex;
     flex-basis: 0;
+    padding: 0 4px;
     color: $palette__text--secondary;
   }
 
   &__value {
     display: inline-flex;
     flex-basis: 0;
+    padding: 0 4px;
   }
 }
